README書いた。あとファイル移動した。

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 program: main.o interface.o interface.h board.h board.o
-	c++ -o program main.o interface.o board.o
+	c++ -o ../build/program main.o interface.o board.o
 
 main.o: main.cpp interface.h board.h board.o interface.o
 	c++ -c main.cpp
@@ -9,3 +9,6 @@ board.o: board.h board.cpp
 
 interface.o: interface.h board.h interface.cpp
 	c++ -c interface.cpp
+
+clean:
+	rm main.o board.o interface.o
